# RateMyModule

./: .asciidoctorconfig  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  DEVELOPING.md  Dockerfile  Dockerfile.migrate  Dockerfile.serve  README.adoc  README.md  manage.py  pyproject.toml
.local-pre-commit-scripts/: django-check.bash
api_htmx/: __init__.py  apps.py  urls.py  views.py
api_htmx/tests/: __init__.py
api_htmx/views/: __init__.py
api_rest/: __init__.py  apps.py  urls.py  views.py
api_rest/serializers/: __init__.py  fields.py
api_rest/templates/rest_framework/: api.html
api_rest/tests/: __init__.py
api_rest/views/: __init__.py
core/: __init__.py  settings.py  urls.py  utils.py  views.py  wsgi.py
dev_docs/: Django Templates.md  HTMX.md  Models_n_migrations_tech_report.md  adding_new_django_aspects.adoc  adding_new_django_aspects.md  deployment_guide_docker.md  development_processes_and_code_quality.adoc  development_processes_and_code_quality.md  example_deployment_configuration.adoc  models_and_migrations.adoc  project_structure.adoc  project_structure.md  running_the_development_server_locally.adoc  running_the_development_server_locally.md  setting_up_pycharm.adoc  setting_up_pycharm.md  start_here.adoc  start_here.md
ratemymodule/: __init__.py  apps.py  exceptions.py
ratemymodule/Utils/: __init__.py  populate_data.py
ratemymodule/admin/: __init__.py  filters.py  forms.py  inlines.py  utils.py
ratemymodule/migrations/: 0001_initial.py  0002_remove_post_ensure_overall_rating_valid_choice_and_more.py  0003_alter_module_code_alter_user_email.py  0004_alter_course_name_alter_module_name.py  0005_alter_othertag_name_alter_tooltag_name_and_more.py  0006_alter_course_name_alter_course_student_type_and_more.py  __init__.py
ratemymodule/models/: __init__.py  managers.py  signals.py  utils.py  validators.py
ratemymodule/templates/admin/partials/: dropdown_list_filter.html  stacked_paginated.html
ratemymodule/tests/: __init__.py  test_data.json  utils.py
ratemymodule/tests/test_models/: __init__.py  test_signals.py
ratemymodule/utils/: __init__.py  populate_data.py
web/: __init__.py  apps.py  forms.py  urls.py
web/static/ratemymodule/css/: base.css  content.css  home.css  submit-report.css
web/static/ratemymodule/favicon/: browserconfig.xml  site.webmanifest
web/static/ratemymodule/scripts/: autocomplete-tags.js  filter-drop-down-menu.js  filter.js  handle-like-rating.js  rating-star-changer.js  search.js
web/static/ratemymodule/styles/: base.css  content.css  home.css  login-modals.css  main-dropdown.css  posts.css  submit-report.css  submit-review.css  university-selector.css  user-settings.css
web/templates/ratemymodule/: base-user-settings.html  base-with-content.html  base.html  change-courses.html  change-email.html  change-password.html  home.html  main-dropdown.html  posts.html  submit-review.html  tag-dropdown.html  university-selector.html  user-settings.html
web/templates/ratemymodule/fragments/: like-dislike-buttons.html  login-modals.html  main-dropdown.html  post-list.html  tag-dropdown.html
web/templatetags/: __init__.py  ratemymodule_extras.py
web/views/: __init__.py  graph_generators.py  graph_utils.py  utils.py
